Fixes label misalignment when assistive alert is empty

--- a/src/player.scss
+++ b/src/player.scss
@@ -710,3 +710,10 @@ and (max-device-width : 1024px)  {
 	}
 }
 
+#assistive-alert {
+	height: 0;
+	width: 0;
+	position: absolute;
+	opacity: 0;
+}
+
